--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,22 @@
 .poppins{
   font-family: var(--font-poppins);
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.mySwiper .swiper-slide {
+  width: auto;
+  display: inline-flex;
+  padding: 6px;
+  padding-left: 16px;
+  padding-right: 16px;
+  user-select: none;
+  cursor: pointer;
+  border-radius: 8px;
+  margin-right: 10px;
+  font-size: 14px;
+}
